<resources>
    <string name="app_name">DemoAuth</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">Welcome !</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">Login failed</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="confirm_password">Confirm password</string>
    <string name="go_to_sign_up">Go to Sign Up</string>
    <string name="go_to_login">Go to Login</string>
    <string name="remember_me">Remember me</string>
    <string name="sign_out">Sign out</string>
    <string name="greeting_message">Hey! Is this your mail? %1$s!</string>
    <string name="greeting_unknown">Как ты здесь оказался, путник?</string>
    <string name="username">Username</string>
</resources>